# chemcli

./: README.md  setup.cfg  setup.py
chemcli/: sdf.py
scripts/: sdf
