[flake8]
exclude = .eggs,*.egg,example

[metadata]
name = chemcli
version = attr:chemcli.__version__
author = AIDD
author_email = aidd-dls_my@dena.jp
description = cli tools for chemoinfomatics with less dependencies
long_description = file:README.md
license = MIT

[options]
install_requires = 
tests_require = nose
  flake8
  flake8-import-order
packages = find:
scripts = scripts/sdf
